[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/VCR_Big.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/VCR_Small.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/settings_pane.gd" type="Script" id=3]

[node name="settings_panel" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )

[node name="window_backing" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -604.0
margin_top = -383.0
margin_right = 604.0
margin_bottom = 383.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window_body" type="VBoxContainer" parent="window_backing"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="window_backing/window_body"]
margin_right = 1208.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
color = Color( 0.984314, 0.784314, 0.00392157, 1 )

[node name="Label" type="Label" parent="window_backing/window_body/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="VBoxContainer" parent="window_backing/window_body"]
margin_top = 54.0
margin_right = 1208.0
margin_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="window_backing/window_body/settings"]
margin_right = 1208.0
margin_bottom = 319.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="window_backing/window_body/settings/VBoxContainer"]
margin_right = 1208.0
margin_bottom = 53.0

[node name="audio_heading" type="Label" parent="window_backing/window_body/settings/VBoxContainer/HBoxContainer"]
margin_right = 1128.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Audio"
align = 2

[node name="CheckButton" type="CheckButton" parent="window_backing/window_body/settings/VBoxContainer/HBoxContainer"]
margin_left = 1132.0
margin_right = 1208.0
margin_bottom = 53.0
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="window_backing/window_body/settings/VBoxContainer"]
margin_top = 57.0
margin_right = 1208.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="window_backing/window_body/settings/VBoxContainer"]
margin_top = 104.0
margin_right = 1208.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"

[node name="music_slider" type="HSlider" parent="window_backing/window_body/settings/VBoxContainer"]
margin_top = 145.0
margin_right = 1208.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 24.0
value = -80.0

[node name="HSeparator2" type="HSeparator" parent="window_backing/window_body/settings/VBoxContainer"]
margin_top = 189.0
margin_right = 1208.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="window_backing/window_body/settings/VBoxContainer"]
margin_top = 233.0
margin_right = 1208.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 2 )
text = "SFX Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_slider" type="HSlider" parent="window_backing/window_body/settings/VBoxContainer"]
margin_top = 277.0
margin_right = 1208.0
margin_bottom = 319.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="window_backing/window_body"]
margin_top = 377.0
margin_right = 1208.0
margin_bottom = 696.0
size_flags_vertical = 3

[node name="settings_okay" type="Button" parent="window_backing/window_body"]
margin_top = 700.0
margin_right = 1208.0
margin_bottom = 765.0
rect_min_size = Vector2( 0, 65 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Okay"
[connection signal="changed" from="window_backing/window_body/settings/VBoxContainer/music_slider" to="window_backing" method="_on_music_slider_changed"]
[connection signal="value_changed" from="window_backing/window_body/settings/VBoxContainer/music_slider" to="window_backing" method="_on_music_slider_value_changed"]
[connection signal="pressed" from="window_backing/window_body/settings_okay" to="window_backing" method="_on_settings_okay_pressed"]
